tests/specs/check/check_node_builtin_modules/mod.js.tsgo.out
Check mod.js
TS2769 [ERROR]: No overload matches this call.
const _data = fs.readFileSync("./node_builtin.js", 123);
                                                   ~~~
    at [WILDLINE]/mod.js:3:52

TS2771 [ERROR]:     The last overload is declared here.
        export function readFileSync(
                        ~~~~~~~~~~~~
        at [WILDLINE]/fs.d.cts:2925:21

error: Type checking failed.
